--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -61,6 +61,8 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          - name: TOOLHIVE_USE_CONFIGMAP
+            value: "true"
           - name: ENABLE_EXPERIMENTAL_FEATURES
             value: "false"
           - name: TOOLHIVE_RUNNER_IMAGE
