fix: cannot deploy MCPRegistry from git in OpenShift
see https://github.com/stacklok/toolhive/commit/e77786e9d37b13d762994c0bfab207bda6500854

Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

--- a/config/base/openshift_env_var_patch.yaml
+++ b/config/base/openshift_env_var_patch.yaml
@@ -3,3 +3,15 @@
   value:
     name: OPERATOR_OPENSHIFT
     value: "true"
+
+- op: add
+  path: /spec/template/spec/containers/0/env/-
+  value:
+    name: GOMEMLIMIT
+    value: "300MiB"
+
+- op: add
+  path: /spec/template/spec/containers/0/env/-
+  value:
+    name: GOGC
+    value: "75"
