chore: added the promoted registry api component
see https://github.com/stacklok/toolhive/commit/8f1a7e94bf1782f4671ac19b142ea3b99f25e21e
see https://github.com/stacklok/toolhive/commit/a1b5c0895bfe85b0f4f8c95d0171a2214947424a
see https://github.com/stacklok/toolhive/commit/22428ff50dedf5c62a8c03d939705651628cf1bc

Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

--- a/config/rbac/kustomization.yaml
+++ b/config/rbac/kustomization.yaml
@@ -18,3 +18,7 @@ resources:
 - metrics_auth_role.yaml
 - metrics_auth_role_binding.yaml
 - metrics_reader_role.yaml
+# The following RBAC configurations are used for the registry-api.
+- registry-api-clusterrole.yaml
+- registry-api-clusterrolebinding.yaml
+- registry-api-serviceaccount.yaml
