--- a/config/base/kustomization.yaml
+++ b/config/base/kustomization.yaml
@@ -35,6 +35,17 @@ replacements:
           name: controller-manager
         fieldPaths:
           - spec.template.spec.containers.[name=manager].env.[name=TOOLHIVE_RUNNER_IMAGE].value
+  - source:
+      kind: ConfigMap
+      version: v1
+      name: toolhive-operator-parameters
+      fieldPath: data.toolhive-registry-api-image
+    targets:
+      - select:
+          kind: Deployment
+          name: controller-manager
+        fieldPaths:
+          - spec.template.spec.containers.[name=manager].env.[name=TOOLHIVE_REGISTRY_API_IMAGE].value
 
 patches:
   - path: openshift_sec_patches.yaml
