--- a/config/base/params.env
+++ b/config/base/params.env
@@ -1,2 +1,3 @@
 toolhive-operator-image=ghcr.io/stacklok/toolhive/operator:v0.5.2-ubi
 toolhive-proxy-image=ghcr.io/stacklok/toolhive/proxyrunner:v0.5.2-ubi
+toolhive-registry-api-image=ghcr.io/stacklok/toolhive/thv-registry-api:latest
