--- a/config/rbac/registry-api-serviceaccount.yaml
+++ b/config/rbac/registry-api-serviceaccount.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: controller-manager
+  name: registry-api
   namespace: system
 automountServiceAccountToken: true
