--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,8 +2,15 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
+- bases/toolhive.stacklok.dev_mcpexternalauthconfigs.yaml
+- bases/toolhive.stacklok.dev_mcpgroups.yaml
 - bases/toolhive.stacklok.dev_mcpregistries.yaml
+- bases/toolhive.stacklok.dev_mcpremoteproxies.yaml
 - bases/toolhive.stacklok.dev_mcpservers.yaml
+- bases/toolhive.stacklok.dev_mcptoolconfigs.yaml
+- bases/toolhive.stacklok.dev_virtualmcpcompositetooldefinitions.yaml
+- bases/toolhive.stacklok.dev_virtualmcpservers.yaml
+
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patches:
