chore: update deployment manifests to fit latest chart state (#2)
* chore: enable RunConfig ConfigMap operator mode

see https://github.com/stacklok/toolhive/commit/fa89af2966212e7a85e2ee3eabbf2954debc1845

Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

* fix: cannot deploy MCPRegistry from git in OpenShift

see https://github.com/stacklok/toolhive/commit/e77786e9d37b13d762994c0bfab207bda6500854

Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

* chore: added the promoted registry api component

see https://github.com/stacklok/toolhive/commit/8f1a7e94bf1782f4671ac19b142ea3b99f25e21e
see https://github.com/stacklok/toolhive/commit/a1b5c0895bfe85b0f4f8c95d0171a2214947424a
see https://github.com/stacklok/toolhive/commit/22428ff50dedf5c62a8c03d939705651628cf1bc

Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

* chore: update the crds folder

Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

---------

Signed-off-by: Tomer Figenblat <tfigenbl@redhat.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -42,7 +42,7 @@ spec:
             readOnlyRootFilesystem: true
             runAsNonRoot: true
             runAsUser: 1000
-          image: "ghcr.io/stacklok/toolhive/operator:v0.2.17"
+          image: "replaced-by-kustomize"
           imagePullPolicy: IfNotPresent
           args:
           - --leader-elect
@@ -61,10 +61,14 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: metadata.namespace
+          - name: TOOLHIVE_USE_CONFIGMAP
+            value: "true"
           - name: ENABLE_EXPERIMENTAL_FEATURES
             value: "false"
           - name: TOOLHIVE_RUNNER_IMAGE
-            value: "ghcr.io/stacklok/toolhive/proxyrunner:v0.2.17"
+            value: "replaced-by-kustomize"
+          - name: TOOLHIVE_REGISTRY_API_IMAGE
+            value: "replaced-by-kustomize"
           - name: TOOLHIVE_PROXY_HOST
             value: "0.0.0.0"
           livenessProbe:
