--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -100,8 +100,12 @@ rules:
 - apiGroups:
   - toolhive.stacklok.dev
   resources:
+  - mcpexternalauthconfigs
+  - mcpgroups
   - mcpregistries
+  - mcpremoteproxies
   - mcpservers
+  - mcptoolconfigs
   verbs:
   - create
   - delete
@@ -113,15 +117,22 @@ rules:
 - apiGroups:
   - toolhive.stacklok.dev
   resources:
+  - mcpexternalauthconfigs/finalizers
+  - mcpgroups/finalizers
   - mcpregistries/finalizers
   - mcpservers/finalizers
+  - mcptoolconfigs/finalizers
   verbs:
   - update
 - apiGroups:
   - toolhive.stacklok.dev
   resources:
+  - mcpexternalauthconfigs/status
+  - mcpgroups/status
   - mcpregistries/status
+  - mcpremoteproxies/status
   - mcpservers/status
+  - mcptoolconfigs/status
   verbs:
   - get
   - patch
